Rearrange and tighten humidity/pressure/etc.

--- a/inc/css/responsive-style.css
+++ b/inc/css/responsive-style.css
@@ -115,8 +115,9 @@ div#currentwx #temp.hot
 
 ul#others {
 	list-style: none;
-	margin: 0;
+	margin: 0 auto;
 	padding: 0;
+	max-width: 350px;
 }
 
 #others li {
