TO/SV/FF warnings done

--- a/inc/css/responsive-style.css
+++ b/inc/css/responsive-style.css
@@ -186,13 +186,17 @@ ul#others {
 
 /* Color-code certain alerts. */
 
-#advisories li.alert.vtec-phen-TO.vtec-sig-A {
-        border-color: rgb(220,0,0);
-        background-color: rgb(255,97,99);
+#advisories li.alert.vtec-phen-TO.vtec-sig-W span.alert-timing, 
+#advisories li.alert.vtec-phen-TO.vtec-sig-A span.alert-timing, 
+#advisories li.alert.vtec-phen-FF.vtec-sig-A span.alert-timing {
         color: #FFF;
 }
 
-#advisories li.alert.vtec-phen-TO.vtec-sig-A span.alert-timing, #advisories li.alert.vtec-phen-FF.vtec-sig-A span.alert-timing {
+/* TO/SV/FF watches */
+
+#advisories li.alert.vtec-phen-TO.vtec-sig-A {
+        border-color: rgb(220,0,0);
+        background-color: rgb(255,97,99);
         color: #FFF;
 }
 
@@ -205,6 +209,24 @@ ul#others {
         border-color: rgb(0,128,0);
         background-color: rgb(3,155,11);
         color: #FFF;
+}
+
+/* TO/SV/FF Warnings */
+
+#advisories li.alert.vtec-phen-TO.vtec-sig-W {
+        border-color: rgb(128,0,0);
+        background-color: rgb(192,0,0);
+        color: #FFF;
+}
+
+#advisories li.alert.vtec-phen-SV.vtec-sig-W {
+        border-color: rgb(198,151,4);
+        background-color: rgb(255,176,14);
+}
+
+#advisories li.alert.vtec-phen-FF.vtec-sig-W {
+        border-color: rgb(0,192,0);
+        background-color: rgb(5,237,17);
 }
 
 #forecast ul {
