Hotfix v3.0.3: Fix styling issues in footer, update logic for wind chills/heat index

--- a/inc/css/responsive-style.css
+++ b/inc/css/responsive-style.css
@@ -252,7 +252,7 @@ ul#others {
 
 #footer {
 	background-color: #444;
-	padding: 10px;
+	padding: 10px 10px 20px 10px;
 	color: #DDD;
 	margin-top: 20px;
 }
