--- a/inc/css/responsive-style.css
+++ b/inc/css/responsive-style.css
@@ -15,6 +15,13 @@ div#wrapper {
 	margin: 0 auto;
 }
 
+div#message {
+    padding: 10px;
+    margin: 10px 0;
+    background-color: #ffec94;
+    font-size: 0.9em;
+}
+
 h1.main-title {
 	background-color: #005acc;
 	color: #FFF;
