System message, not downtime message

--- a/inc/css/responsive-style.css
+++ b/inc/css/responsive-style.css
@@ -15,7 +15,7 @@ div#wrapper {
 	margin: 0 auto;
 }
 
-div.downtime-message {
+div.system-message {
     padding: 10px;
     margin: 10px 0;
     background-color: #ffec94;
