Use the Apple system font in Chrome, too

--- a/inc/css/responsive-style.css
+++ b/inc/css/responsive-style.css
@@ -1,5 +1,5 @@
 body {
-	font-family:  -apple-system, Helvetica Neue, Roboto, Arial, sans-serif;
+	font-family:  -apple-system, BlinkMacSystemFont, Helvetica Neue, Roboto, Arial, sans-serif;
 	margin: 0 auto;
 }
 
