Add support link to footer

--- a/inc/css/responsive-style.css
+++ b/inc/css/responsive-style.css
@@ -265,17 +265,19 @@ ul#others {
 	margin-top: 20px;
 }
 
-#footer h2 {
-	color: #EEE;
-	max-width: 768px;
-	margin: 10px auto;
-}
-
 #footer-wrapper {
-	font-size: 0.8em;
-	font-weight: 200;
 	max-width: 768px;
 	margin: 0 auto;
+}
+
+#footer-wrapper p {
+	font-size: 0.8em;
+	font-weight: 200;
+}
+
+#footer-wrapper h2 {
+	color: #EEE;
+	margin: 10px auto;
 }
 
 #footer a {
