Supporters page and styles

--- a/inc/css/responsive-style.css
+++ b/inc/css/responsive-style.css
@@ -15,6 +15,10 @@ div#wrapper {
 	margin: 0 auto;
 }
 
+#wrapper ul li {
+    list-style: square;
+}
+
 div.system-message {
     padding: 10px;
     margin: 10px 0;
